lib/ceml/tt/scripts.treetop
module CEML
grammar Scripts
  include Lexer
  include Casting
  include Instructions

  rule scripts
    script more:(nl script)* {
        def list
            [script] + more.elements.map(&:script)
        end
    }
  end

  rule free_scripts
    nl? scripts nl?
  end

  rule free_script
    nl? script nl?
  end

  rule script
    (
        title nl casting_statement nl instructions /
        title nl instructions /
        casting_statement nl instructions /
        title nl casting_statement /
        instructions /
        title
    ) <Script>
  end

  rule title
    '"' value:('\\"' / !'"' .)+ '"' {
        def title_value
            value.text_value.gsub(/\\"/, '"')
        end
    }
  end

  rule instructions
      instruction_stmt more:(nl instruction_stmt)* <Instructions>
  end

end
end
